# django_project

./: .dockerignore  .gitignore  Dockerfile  Info.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
delivery_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
parcels/: exceptions.py  models.py  serializers.py  tasks.py  tests.py  views.py
parcels/management/commands/: run_delivery_costs.py  seed_parcel_types.py
parcels/migrations/: 0001_initial.py  0002_rename_value_parcel_content_value_and_more.py  0003_rename_parcel_type_parcel_type_and_more.py
static/css/: styles.css
templates/: base.html  parcel_detail.html  parcel_list.html  parcel_types.html  register_parcel.html
